--- a/src/main/resources/templates/admin/edit-product.html
+++ b/src/main/resources/templates/admin/edit-product.html
@@ -108,6 +108,7 @@
 
 <body>
     <div th:replace="~{fragment::admin-navbar}"></div>
+    <div th:replace="~{fragment::admin-sidebar}"></div>
     <div class="admin-header">
         <div class="container">
             <h1><i class='bx bx-edit me-2'></i>Edit Product</h1>
