--- a/src/main/resources/templates/admin/coupon/add-coupon.html
+++ b/src/main/resources/templates/admin/coupon/add-coupon.html
@@ -90,6 +90,7 @@
 
 <body>
     <div th:replace="~{fragment::admin-navbar}"></div>
+    <div th:replace="~{fragment::admin-sidebar}"></div>
     <div class="admin-header">
         <div class="container">
             <h1><i class='bx bx-plus me-2'></i>Add Coupon</h1>
