--- a/src/main/resources/templates/admin/orders/item-view.html
+++ b/src/main/resources/templates/admin/orders/item-view.html
@@ -76,6 +76,7 @@
 
 <body>
     <div th:replace="~{fragment::admin-navbar}"></div>
+    <div th:replace="~{fragment::admin-sidebar}"></div>
     <div class="admin-header">
         <div class="container">
             <h1><i class='bx bx-info-circle me-2'></i>Order Item Details</h1>
