--- a/src/main/resources/templates/admin/updateuser.html
+++ b/src/main/resources/templates/admin/updateuser.html
@@ -88,6 +88,7 @@
 
 <body>
     <div th:replace="~{fragment::admin-navbar}"></div>
+    <div th:replace="~{fragment::admin-sidebar}"></div>
     <div class="admin-header">
         <div class="container">
             <h1><i class='bx bx-edit me-2'></i>Update Customer</h1>
